2008-02-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el: Make it more robust in the presence of empty context
	lines in unified hunks.
	(diff-valid-unified-empty-line): New var.
	(diff-unified->context, diff-sanity-check-hunk): Obey it.
	(diff-end-of-hunk): Obey it.  New arg `donttrustheader'.
	(diff-fixup-modifs, diff-post-command-hook): Use this new arg.
	(diff-hunk-header-re-unified): New const.
	(diff-font-lock-keywords, diff-hunk-header-re, diff-split-hunk)
	(diff-fixup-modifs, diff-unified->context, diff-next-complex-hunk)
	(diff-sanity-check-hunk): Use it.

2008-02-19  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdba): Recreate as an alias for gdb.
	(gdb): (Re)set gdb-flush-pending-output to nil here...
	(gdb-init-1): ...instead of here (before gdb-prompt).

2008-02-18  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/verilog-mode.el (customize): Fix typo in error message.
	(verilog-mode, verilog-mode-indent, verilog-mode-actions)
	(verilog-mode-auto, verilog-indent-level-module)
	(verilog-minimum-comment-distance, verilog-library-flags)
	(verilog-library-directories, verilog-library-files)
	(verilog-auto-reset-widths, verilog-imenu-generic-expression)
	(verilog-xemacs-menu, verilog-set-compile-command)
	(verilog-set-compile-command, verilog-mode-syntax-table, verilog-mode)
	(verilog-get-expr, verilog-strip-comments, verilog-one-line)
	(verilog-lint-off, verilog-batch-auto, verilog-batch-delete-auto)
	(verilog-batch-inject-auto, verilog-batch-indent)
	(verilog-continued-line, verilog-type-keywords)
	(verilog-read-sub-decls-sig, verilog-read-sub-decls-line)
	(verilog-read-inst-pins, verilog-read-arg-pins)
	(verilog-read-auto-template, verilog-read-signals, verilog-getopt-file)
	(verilog-add-list-unique, verilog-symbol-detick, verilog-modi-filename)
	(verilog-auto-star, verilog-auto-inst, verilog-auto-wire)
	(verilog-enum-ascii, verilog-sk-begin, verilog-sk-fork)
	(verilog-sk-datadef, verilog-colorize-include-files-buffer)